[project]
name = "presentation-uk"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ahamd Niarais", email = "nia.sam1@gmail.com"},
]
dependencies = ["streamlit>=1.51.0", "pandas>=2.3.3", "plotly>=6.4.0", "pydeck>=0.9.1", "altair>=5.5.0", "scipy>=1.16.3", "streamlit-folium>=0.25.3", "graphviz>=0.21"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}
package-mode = false

[tool.poetry]
package-mode = false

[tool.pdm]
distribution = false